United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6730276 JDI_REGRESSION tests fail with "Error: count must be non-zero" error on x86
6730276 : JDI_REGRESSION tests fail with "Error: count must be non-zero" error on x86

Details
Type:
Bug
Submit Date:
2008-07-26
Status:
Closed
Updated Date:
2012-02-01
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs14
Fixed Versions:
hs19

Related Reports
Backport:
Backport:
Backport:
Backport:
Relates:

Sub Tasks

Description
The test is
	com/sun/jdi/PopAndInvokeTest.java

The failure mode is:
#  Internal Error (/tmp/jprt-jprtadm/P1/B/152449.dcubed/source/src/share/vm/utilities/globalDefinitions.cpp:38), pid=10087, tid=3072621456
#  Error: count must be non-zero

See /java/sqe/results/vm/gtee/JDK7/NIGHTLY/VM/2008-07-22/Serv_Baseline/javase/linux-i586/client/mixed/javase-linux-i586_client_mixed_JDI_REGRESSION2008-07-22-19-57-48/workDir/com/sun/jdi/PopAndInvokeTest.jtr

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/d93949c5bdcc
                                     
2010-06-11
PUBLIC COMMENTS

Modify assembler code to check for 0 count for all copy routines and remove asserts.
                                     
2010-06-11



Hardware and Software, Engineered to Work Together