6730276: JDI_REGRESSION tests fail with "Error: count must be non-zero" error on x86

Modify assembler code to check for 0 count for all copy routines.

Reviewed-by: never, ysr, jcoomes